--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,43 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
+      <ion-grid>
+        <ion-row>
+          <ion-col size-sm="4" size-xs="12">
+            <h1>Catálogo</h1>
+          </ion-col>
+          <ion-col size-sm="8" size-xs="12">
+            <ion-button color="success" routerLink="/carrito" strong="true">Carrito
+            </ion-button>
+            <ion-button color="success" routerLink="/categorias/otros" strong="true">Otros
+            </ion-button>
+            <ion-button color="success" routerLink="/categorias/electronicos" strong="true">Electrónicos
+            </ion-button>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
     </ion-toolbar>
   </ion-header>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
-</ion-content>
+  <ion-content>
+    <ion-grid>
+      <ion-row>
+        <ion-col *ngFor="let producto of productos" size-md="4" size-sm="12" size-xs="12">
+          <ion-card>
+            <ion-img src="assets/images/items/{{producto.imagen}}"></ion-img>
+            <ion-card-header>
+              <ion-card-title><h2>{{producto.titulo}}</h2></ion-card-title>
+              <ion-card-subtitle>${{producto.precio}}</ion-card-subtitle>
+            </ion-card-header>
+            <ion-card-content>
+              <ion-button [routerLink]="['/productos', producto.link]" color="primary" strong="true">Ver detalles
+              </ion-button>
+              <ion-button (click)="agregarCarrito(producto)" color="danger" strong="true">Agregar al
+                carrito
+              </ion-button>
+            </ion-card-content>
+          </ion-card>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+
+  </ion-content>
