--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,30 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+h1 {
+  font-size: 24px;
+  font-weight: bold;
+}
+
+ion-toolbar ion-button {
+  float: right;
+}
+
+ion-card-title h2{
+  font-size: 20px;
+  font-weight: bold;
+}
+
+ion-card-subtitle {
+  font-size: 18px;
+  font-weight: bold;
+}
+ion-card {
+  text-align: center;
+}
+
+p {
+  font-size: 16px!important;
+  margin-bottom: 20px!important;
+}
